--- a/index.html
+++ b/index.html
@@ -15,18 +15,26 @@
 Hello! Welcome to my webpage. My name is Yi-Chung. I am currently located in New York Metropolitan area.  
 
 </div>
-
+<hr>
 <h3>About Me</h3>
 
   <div>
 <p> 
 I am currently learning to code. This is where I will be adding more additional content as I learn more about web development and other programming skills.
-In addition to coding, I also enjoy running and drawing.
+In addition to coding, I also enjoy:
+<ol>
+<li>Running</li>
+<li>Drawing</li>
+</ol>
 </p>
-
+<hr>
 <h3>Contact</h3>
-<a href="https://www.linkedin.com/in/yi-chung-c-71a26a25/">LinkedIn</a>
-<a href="">link text</a>
+<ul>
+<li><a href="https://www.linkedin.com/in/yi-chung-c-71a26a25/">LinkedIn</a></li>
+<li><a href="https://github.com/yic-0/yic-0.github.io">GitHub</a></li>
+
+</ul>
+
 
   </div>
 </body>
