--- a/index.html
+++ b/index.html
@@ -1,43 +1,53 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<!--creating html doc-->
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>YC Thinkful</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-<h1>Yi-Chung</h1>
-<h2>Webpage</h2>
-<div>
-<img src="https://uxfactor.files.wordpress.com/2012/12/stick-figure1.jpg" alt="Italian Trulli">
-</br>
-Hello! Welcome to my webpage. My name is Yi-Chung. I am currently located in New York Metropolitan area.  
-
-</div>
-<hr>
-<h3>About Me</h3>
-
-  <div>
-<p> 
-I am currently learning to code. This is where I will be adding more additional content as I learn more about web development and other programming skills.
-In addition to coding, I also enjoy:
-<ol>
-<li>Running</li>
-<li>Drawing</li>
-</ol>
-</p>
-<hr>
-<h3>Contact</h3>
-<ul>
-<li><a href="https://www.linkedin.com/in/yi-chung-c-71a26a25/">LinkedIn</a></li>
-<li><a href="https://github.com/yic-0/yic-0.github.io">GitHub</a></li>
-
-</ul>
-
-
-  </div>
-</body>
+   <head>
+   <!--creating header-->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>YC Thinkful</title>
+      <link href="style.css" rel="stylesheet" type="text/css" />
+   </head>
+   <body>
+   <!--creating body with content-->
+      <h1>Yi-Chung</h1>
+      <h2>Webpage</h2>
+      <div>
+         <img src="https://media.licdn.com/dms/image/C4D03AQEzQMOkif2Z9Q/profile-displayphoto-shrink_200_200/0/1517257915520?e=1681344000&v=beta&t=KeaQbK6dwBh7skHlVq7oZ1QWDgJj5VbOYsXhhMfyR2k" alt="Italian Trulli">
+         </br>
+         Hello! Welcome to my webpage. My name is Yi-Chung. I am located in the New York Metropolitan area.  
+      </div>
+      <article>
+         <hr>
+         <h3>About Me</h3>
+         <div>
+            <p> 
+               I am currently learning to code. This is where I will be adding more additional content as I learn more about web development and other programming skills. I look froward to working with others and learning more about coding as I progress in my course.
+               </br>In addition to coding, I also enjoy:
+            <ol>
+               <li>Hiking</li>
+               <li>Running</li>
+               <li>Traveling</li>
+               <li>Drawing</li>
+               <li>Driving</li>
+               <li>Rowing</li>
+            </ol>
+            </p>
+            <hr>
+            <h3>Contact</h3>
+			<!--using links-->
+            <ul>
+               <li><a href="https://www.linkedin.com/in/yi-chung-c-71a26a25/">LinkedIn</a></li>
+               <li><a href="https://github.com/yic-0/yic-0.github.io">GitHub</a></li>
+            </ul>
+         </div>
+      </article>
+   </body>
+   <footer>
+   <!--adding footer-->
+      Author:YC
+      <a href="mailto:yic@duck.com">email me</a>
+   </footer>
 </html>
 
 
